--- a/profile-master/project1.html
+++ b/profile-master/project1.html
@@ -67,8 +67,9 @@
 			
 			<div class="row">
 				<div class="timeline-heading row-pb-sm">
-					<h3 class="timeline-title text-center">Android Food Delivery Application with Arduino-based 
-						Autonomous Robot Integration</h3>
+					<!-- <h3 class="timeline-title text-center">Android Food Delivery Application with Arduino-based 
+						Autonomous Robot Integration</h3> -->
+						<h3 class="timeline-title text-center" id="demo"></h3>
 					<span class="company text-center">University Malaysia of Computer Science and Engineering (UNIMY)</span>
 				</div>
 			</div>
@@ -169,6 +170,7 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 	<script src="js/replacescrollwithback.js"></script>
+	<script src="js/getfromurl.js"></script>
 
 
 	</body>
